--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,13 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+SHARED_DB_CONNECTION=mysql
+SHARED_DB_HOST=127.0.0.1
+SHARED_DB_PORT=3306
+SHARED_DB_DATABASE=shared
+SHARED_DB_USERNAME=root
+SHARED_DB_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
